fix post-microservice part 2